--- a/src/itacademyproject/gui/WelcomeScreen.form
+++ b/src/itacademyproject/gui/WelcomeScreen.form
@@ -58,9 +58,6 @@
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Welcome Screen"/>
     <Property name="autoRequestFocus" type="boolean" value="false"/>
-    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="e6" green="e6" red="e6" type="rgb"/>
-    </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -111,7 +108,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="WELCOME TO THE COMPANY MANAGMENT SYSTEM"/>
+        <Property name="text" type="java.lang.String" value="WELCOME TO THE EMPLOYEE MANAGMENT SYSTEM"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="mainPanel">
